# cattogradplusplus

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CattoGrad/: atto.cpp  atto.h
cattogradplusplus/: Layer.cpp  Layer.h  MLP.cpp  MLP.h  Module.cpp  Module.h  Neuron.cpp  Neuron.h  atto.cpp  atto.h
